--- a/java-jdev/.project
+++ b/java-jdev/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>curso_java_web</name>
+	<name>java-jdev</name>
 	<comment></comment>
 	<projects>
 	</projects>
